--- a/webapp.css
+++ b/webapp.css
@@ -3,6 +3,7 @@
 
 body {
     background-image: url("images/barn.jpg");
+	background-size: cover;
 }
 /*-------------------------------------------------
 
