--- a/webapp.css
+++ b/webapp.css
@@ -21,6 +21,7 @@ body {
 	background-color: white;
 	height: 500px;
 	float: left;
+	border-radius: 15px;
 }
 #rightColumn {
 	background-color: white;
