made better css
made text fancier

--- a/webapp.css
+++ b/webapp.css
@@ -1,9 +1,12 @@
 @charset "UTF-8";
 /* CSS Document */
 
+@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
+
 body {
     background-image: url("images/barn.jpg");
 	background-size: cover;
+	font-family:'Gloria Hallelujah', cursive;
 }
 /*-------------------------------------------------
 
