--- a/webapp.css
+++ b/webapp.css
@@ -9,6 +9,8 @@ body {
 	font-family:'Gloria Hallelujah', cursive;
 }
 
+/*<h2 id="shopName" onclick="random_name();">Click here to name your brownie shop!</h2>*/
+
 
 /*-------------------------------------------------
 
