added better background picture

--- a/alien.css
+++ b/alien.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
 
 body {
-    background-image: url("images/mars.png");
+    background-image: url("images/better.gif");
 	background-size: cover;
 	font-family:'Gloria Hallelujah', cursive;
 }
