--- a/alien.css
+++ b/alien.css
@@ -17,6 +17,10 @@ body {
 	BASIC STRUCTURE
 
 -------------------------------------------------*/
+#title {
+	font-size: 40px;
+	text-align: center;
+}
 
 #wrapper {
 	width: 960px;
@@ -26,7 +30,7 @@ body {
 
 #leftColumn	 {
 	background-color: #59160D;
-	height: 520px;
+	height: 555px;
 	float: left;
 	border-radius: 15px;
 }
