--- a/webapp.css
+++ b/webapp.css
@@ -18,7 +18,9 @@ body {
 
 -------------------------------------------------*/
 #title {
-	font-size: 40px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	font-size: 30px;
 	text-align: center;
 }
 
@@ -39,4 +41,37 @@ body {
 	float: right;
 	width: 400px;
 	border-radius: 15px;
+}
+
+/* responsive widths*/
+
+@media screen and (max-width: 980px) {
+	#wrapper {
+		width: 94%;
+	}
+	#rightColumn {
+		width: 65%;
+	}
+	#leftColumn {
+		width: 30%;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	#leftColumn, #rightColumn {
+		width: auto;
+		float: none;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	#wrapper {
+		height: auto;
+	}
+	#title {
+		font-size: 24px;
+	}
+	#leftColumn, rightColumn {
+		float: none;
+	}
 }
