--- a/alien.css
+++ b/alien.css
@@ -20,6 +20,10 @@ body {
 	text-align: center;
 }
 
+#leftColumn img {
+	width: 100%;
+}
+
 #wrapper {
 	width: 960px;
 	padding: 5px;
@@ -28,7 +32,7 @@ body {
 
 #leftColumn	 {
 	background-color: #59160D;
-	height: 555px;
+	height: 650px;
 	float: left;
 	border-radius: 15px;
 }
@@ -37,4 +41,37 @@ body {
 	float: right;
 	width: 400px;
 	border-radius: 15px;
+}
+
+/* responsive widths*/
+
+@media screen and (max-width: 980px) {
+	#wrapper {
+		width: 94%;
+	}
+	#rightColumn {
+		width: 65%;
+	}
+	#leftColumn {
+		width: 30%;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	#leftColumn, #rightColumn {
+		width: 50%;
+		float: none;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	#wrapper {
+		height: auto;
+	}
+	#title {
+		font-size: 24px;
+	}
+	#leftColumn, rightColumn {
+		float: none;
+	}
 }
