--- a/webapp.css
+++ b/webapp.css
@@ -28,6 +28,10 @@ var name = prompt("Hi there! What do you want to name you egg company?");
 	text-align: center;
 }
 
+#leftColumn img {
+	width: 100%;
+}
+
 #wrapper {
 	width: 960px;
 	padding: 5px;
@@ -36,7 +40,7 @@ var name = prompt("Hi there! What do you want to name you egg company?");
 
 #leftColumn	 {
 	background-color: white;
-	height: 555px;
+	height: 650px;
 	float: left;
 	border-radius: 15px;
 }
@@ -63,7 +67,7 @@ var name = prompt("Hi there! What do you want to name you egg company?");
 
 @media screen and (max-width: 700px) {
 	#leftColumn, #rightColumn {
-		width: 30%;
+		width: 50%;
 		float: none;
 	}
 }
