emma, you must copy

--- a/webapp.css
+++ b/webapp.css
@@ -9,7 +9,7 @@ body {
 	font-family:'Gloria Hallelujah', cursive;
 }
 
-
+/*<div id="footer"><p><a href="mailto:neiko.lopez@warriorlife.net">&copy; Neiko Lopez, Emma Balog, and Alicia Shi. 2018</a></p></div>
 
 
 /*-------------------------------------------------
